# yumetouch

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml.example  flake.nix
.github/workflows/: ci.yml
resources/: net.sadmelon.yumetouch.plist
src/: config.rs  detector.rs  icon.rs  main.rs  notifier.rs
