[package]
name = "yumetouch"
version = "0.1.0"
edition = "2024"
description = "macOS YubiKey touch notifier daemon"
license = "MIT"

[dependencies]
mac-notification-sys = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
log = "0.4"
env_logger = "0.11"
ctrlc = "3"
